Update picture of my dog

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -207,7 +207,7 @@
                         R&B. 
                     </div>
                     <center>
-                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nata.jpeg" alt="" 
+                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nata.jpg" alt="" 
                         width = "30%"/>
                     </center>
                 </div>
