Fix to fit style guidelines

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <title>Ramya Bhaskara</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Ramya Bhaskara</span><span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" />
-        </span></a>
+        <span class="d-block d-lg-none">Ramya Bhaskara</span>
+        <span class="d-none d-lg-block">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="">
+        </span>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span></button>
@@ -43,11 +45,11 @@
         <div class="resume-section-content">
           <h1 class="mb-0">Ramya <span class="text-primary">Bhaskara</span></h1>
           <div class="subheading mb-5">University of Virginia · 
-            <a href="mailto:name@email.com">ramya.s.bhaskara@gmail.com</a>
+            <a href="mailto:ramya.s.bhaskara@gmail.com">ramya.s.bhaskara@gmail.com</a>
           </div>
           <p class="lead mb-5">I am a rising 3rd year at the University of Virginia majoring in Computer 
-              Science and Statistics. I am extremely interested in opportunities in software development, 
-              data analytics, and machine learning. </p>
+              Science and Statistics. I am interested in opportunities in software development, 
+              data analytics, and machine learning.</p>
           <div class="social-icons">
             <a class="social-icon" href="https://www.linkedin.com/in/ramya-bhaskara-762482168">
                 <i class="fab fa-linkedin-in"></i></a>
@@ -55,7 +57,7 @@
           </div>
         </div>
       </section>
-      <hr class="m-0" />
+      <hr class="m-0">
       <!-- Experience-->
       <section class="resume-section" id="experience">
         <div class="resume-section-content">
@@ -101,14 +103,14 @@
                 <li>Extracted emails from GitHub Repositories using its REST API to survey 
                     programmers of what languages and IDEs were best suited to their needs</li>
                 <li>Designed features to help meet developer needs for debugging based
-                    based on codebase size, etc. </li>
+                    based on codebase size, etc.</li>
               </ul>
             </div>
             <div class="flex-shrink-0"><span class="text-primary">June 2017 - August 2017</span></div>
           </div>
         </div>
       </section>
-      <hr class="m-0" />
+      <hr class="m-0">
       <!-- Education-->
       <section class="resume-section" id="education">
         <div class="resume-section-content">
@@ -136,7 +138,7 @@
           </div>
         </div>
       </section>
-      <hr class="m-0" />
+      <hr class="m-0">
       <!-- Projects-->
       <section class="resume-section" id="projects">
         <div class="resume-section-content">
@@ -158,36 +160,36 @@
               <ul>
                 <li>Used Google FIT API and Android Studio to create an application that used 
                         patterns in user habits to make suggestions about diet, exercise, and sleep</li>
-                <li> Created algorithm to make suggestions to users based on past data </li>
+                <li>Created algorithm to make suggestions to users based on past data</li>
               </ul>
             </div>
             <div class="flex-shrink-0"><span class="text-primary">August 2014 - June 2018</span></div>
           </div>
         </div>
         </section>
-        <hr class="m-0" />
+        <hr class="m-0">
         <!-- Skills-->
         <section class="resume-section" id="skills">
           <div class="resume-section-content">
             <h2 class="mb-5">Skills</h2>
             <div class="subheading mb-3">Programming Languages & Tools</div>
             <ul>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C++</li>
-                <li>Unix</li>
-                <li>Scikit-Learn</li>
-                <li>Tensorflow/Keras</li>
-                <li>AWS</li>
-                <li>Github</li>
-                <li>Matlab</li>
-                <li>HTML</li>
-                <li>Django</li>
-                <li>Bootstrap</li>
+              <li>Java</li>
+              <li>Python</li>
+              <li>C++</li>
+              <li>Unix</li>
+              <li>Scikit-Learn</li>
+              <li>Tensorflow/Keras</li>
+              <li>AWS</li>
+              <li>Github</li>
+              <li>Matlab</li>
+              <li>HTML</li>
+              <li>Django</li>
+              <li>Bootstrap</li>
             </ul>
           </div>
         </section>
-        <hr class="m-0" />
+        <hr class="m-0">
         <!-- Interests-->
         <section class="resume-section" id="interests">
           <div class="resume-section-content">
@@ -195,10 +197,10 @@
             <div>In my free time, I enjoy singing, sewing, art, and
                 playing with my dog. Some of my favorite shows are Avatar the Last Airbender, the Office,
                 Parks and Recreation, Silicon Valley, and New Girl. My favorite type of music is alternative 
-                R&B. </div>
+                R&B.</div>
             <center>
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nata.jpg" alt="" 
-                  width = "30%"/>
+                  width = "30%">
             </center>
           </div>
         </section>
