--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/daymode.css" rel="stylesheet">
+    <link href="css/daymode.css" rel="stylesheet" id="pagestyle">
+    <script src="script.js"></script>
   </head>
   <body id="page-top">
     <!-- Navigation-->
@@ -39,7 +40,7 @@
         </ul>
       </div>
       <div class="social-icons">
-        <button class="social-icon" onclick="switchMode()"><i class="fas fa-adjust"></i></button>
+        <button class="social-icon" onclick="switchMode()"><i class="fas fa-moon" id="modeicon"></i></button>
       </div>
     </nav>
     <!-- Page Content-->
@@ -225,6 +226,5 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
       <!-- Core theme JS-->
       <script src="js/scripts.js"></script>
-      <script src="script.js"></script>
     </body>
 </html>
