Update Javascript comments and file organization

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,7 +15,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/daymode.css" rel="stylesheet" id="pagestyle">
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body id="page-top">
     <!-- Navigation-->
