--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/daymode.css" rel="stylesheet" id="pagestyle">
+    <link href="" rel="stylesheet" id="pagestyle">
     <script src="js/script.js"></script>
   </head>
   <body id="page-top">
@@ -214,7 +214,7 @@
             <br>
             <center>
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nata.jpg" alt="" 
-                  width = "30%">
+                  width="30%">
             </center>
           </div>
         </section>
