Add fetch from data servlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -215,6 +215,10 @@
             <center>
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nata.jpg" alt="" 
                   width="30%">
+              <br>
+              <button onclick="getText()">Get Text!</button>
+              <br>
+              <div class="mb-5" id="message-container"></div>
             </center>
           </div>
         </section>
