Check for empty comments and fix style nits

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -219,7 +219,7 @@
             </center>
             <form action="/data" method="POST">
               <p>Comment:</p>
-              <textarea name="text-input"></textarea>
+              <textarea name="text-input" required></textarea>
               <input type="submit"/>
             </form>
             <br>
