--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlROcmLiGubcsZ2nineIwdctDvk9E65yY"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css">
@@ -135,6 +136,13 @@
             </div>
             <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022 (Currently Attending)</span></div>
           </div>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+              <center>
+                <div id="mapUVA" style="width: 50%; height:200px"></div>
+              </center>
+            </div>
+          </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
               <div class="flex-grow-1">
                  <h3 class="mb-0">Rock Ridge High School</h3>
@@ -145,6 +153,13 @@
                 </div>
               </div>
               <div class="flex-shrink-0"><span class="text-primary">August 2014 - June 2018</span></div>
+          </div>
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+              <center>
+                <div id="mapRR" style="width: 50%; height:200px"></div>
+              </center>
+            </div>
           </div>
         </div>
       </section>
