--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -245,7 +245,7 @@
                   <textarea class="form-control" name="text-input" onfocus="this.value=''" placeholder="Type your comment here!" required></textarea>
                 </div>
                 <div class="form-group col-md-2">
-                  <button type="submit" class="social-icon"><i class="fas fa-share" id="modeicon"></i></button>
+                  <button type="submit" class="social-icon"><i class="fas fa-share"></i></button>
                 </div>
                 <div class="form-group col-md-3">
                   <select class="float-right form-control" name="number-comments" id="number-comments" onchange="getText()">
