Add nightmode support for maps

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022 (Currently Attending)</span></div>
           </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="d-flex flex-column flex-md-row justify-content-between mb-5 info-window-text">
             <div class="flex-grow-1">
               <center>
                 <div id="mapUVA" style="width: 50%; height:200px"></div>
