Fix light/dark mode to work after refresh and update comments after delete

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -44,6 +44,7 @@
       <div class="social-icons">
         <button class="social-icon" onclick="switchMode()"><i class="fas fa-moon" id="modeicon"></i></button>
       </div>
+      <script type="text/javascript">setMode();</script>
     </nav>
     <!-- Page Content-->
     <div class="container-fluid p-0 bg-mode">
