--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -44,7 +44,6 @@
       <div class="social-icons">
         <button class="social-icon" onclick="switchMode()"><i class="fas fa-moon" id="modeicon"></i></button>
       </div>
-      <script type="text/javascript">setMode();</script>
     </nav>
     <!-- Page Content-->
     <div class="container-fluid p-0 bg-mode">
@@ -140,7 +139,7 @@
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5 info-window-text">
             <div class="flex-grow-1">
               <center>
-                <div id="mapUVA" style="width: 50%; height:200px"></div>
+                <div id="map-uva"></div>
               </center>
             </div>
           </div>
@@ -158,7 +157,7 @@
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
               <center>
-                <div id="mapRR" style="width: 50%; height:200px"></div>
+                <div id="map-rr"></div>
               </center>
             </div>
           </div>
