--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,6 +38,9 @@
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#comments">Comments</a></li>
+          <br>
+          <br>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="" id="login">LOGIN</a></li>
         </ul>
       </div>
       <div class="social-icons">
@@ -224,28 +227,30 @@
         <section class="resume-section" id="comments">
           <div class="resume-section-content">
             <h2 class="mb-5 header-mode">Comments</h2>
-            <form action="/data" method="POST" class="social-icons">
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <textarea class="form-control" name="text-input" onfocus="this.value=''" placeholder="Type your comment here!" required></textarea>
+            <div id="comments-body">
+              <form action="/data" method="POST" class="social-icons">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <textarea class="form-control" name="text-input" onfocus="this.value=''" placeholder="Type your comment here!" required></textarea>
+                  </div>
+                  <div class="form-group col-md-2">
+                    <button type="submit" class="social-icon"><i class="fas fa-share" id="modeicon"></i></button>
+                  </div>
+                  <div class="form-group col-md-3">
+                    <select class="float-right form-control" name="number-comments" id="number-comments" onchange="getText()">
+                      <option value="10" selected disabled hidden>Number Comments to Display</option>
+                      <option value="5">5</option>
+                      <option value="10">10</option>
+                      <option value="15">15</option>
+                      <option value="20">20</option>
+                    </select>
+                  </div>
                 </div>
-                <div class="form-group col-md-2">
-                  <button type="submit" class="social-icon"><i class="fas fa-share" id="modeicon"></i></button>
-                </div>
-                <div class="form-group col-md-3">
-                  <select class="float-right form-control" name="number-comments" id="number-comments" onchange="getText()">
-                    <option value="10" selected disabled hidden>Number Comments to Display</option>
-                    <option value="5">5</option>
-                    <option value="10">10</option>
-                    <option value="15">15</option>
-                    <option value="20">20</option>
-                  </select>
-                </div>
+              </form>
+              <br>
+              <div class="social-icons">
+                <ul class="list-group" id="message-container"></ul>
               </div>
-            </form>
-            <br>
-            <div class="social-icons">
-              <ul class="list-group" id="message-container"></ul>
             </div>
           </div>
         </section>
