Fix script.js and other style issues

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -39,11 +39,9 @@
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#comments">Comments</a></li>
-          <br>
-          <br>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="" id="login">LOGIN</a></li>
         </ul>
       </div>
+      <a class="nav-link js-scroll-trigger" href="#" id="login">Login</a>
       <div class="social-icons">
         <button class="social-icon" onclick="switchMode()"><i class="fas fa-moon" id="modeicon"></i></button>
       </div>
