Add "all" option to number-comments selector

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -256,6 +256,7 @@
                       <option value="10">10</option>
                       <option value="15">15</option>
                       <option value="20">20</option>
+                      <option value="all">all</option>
                     </select>
                   </div>
                 </div>
